# GetIconExample

./: CMakeLists.txt  README.md  main.cpp.txt
